remove the privilege escalation on .ansible.cfg

--- a/.ansible.cfg
+++ b/.ansible.cfg
@@ -99,9 +99,9 @@ remote_user = root
 # you may need to change this to bin/bash in rare instances
 # if sudo is constrained
 #
-executable = /usr/bin/sh
+# executable = /usr/bin/sh
 #
-#executable = /bin/bash
+executable = /bin/bash
 
 # if inventory variables overlap, does the higher precedence one win
 # or are hash values merged together?  The default is 'replace' but
@@ -275,10 +275,10 @@ var_compression_level = 9
 #merge_multiple_cli_flags = False
 
 [privilege_escalation]
-become=True
-become_method=sudo
-become_user=root
-become_ask_pass=False
+#become=True
+#become_method=sudo
+#become_user=root
+#become_ask_pass=False
 
 [paramiko_connection]
 
